cluster-1/05-service-cluster-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-cluster-1
spec:
  type: ExternalName
  externalName: eks-1-eu-west-1.dev.nexmo.cloud
